# fastapi-todo-app

./: .gitignore  Dockerfile.cloud  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml
api/: db.py  main.py  migrate_cloud_db.py  migrate_db.py
api/cruds/: task.py
api/routers/: done.py  task.py
api/schemas/: done.py  task.py
tests/: test_main.py
