[tool.poetry]
name = "fastapi-todo-app"
version = "0.1.0"
description = ""
authors = ["perforb <dev.perfumed.garden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.99.1"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
sqlalchemy = "^2.0.18"
pymysql = "^1.1.0"
aiomysql = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
